# ska-ser-ansible-collections

./: .gitignore  .gitlab-ci.yml  .release  .yamllint.yaml  CODEOWNERS  Makefile  README.md  pyproject.toml  requirements.yml
ansible_collections/ska_collections/ceph/: README.md  galaxy.yml
ansible_collections/ska_collections/clusterapi/: README.md  galaxy.yml
ansible_collections/ska_collections/dns/: README.md  galaxy.yml
ansible_collections/ska_collections/docker_base/: README.md  galaxy.yml
ansible_collections/ska_collections/elastic/: README.md  galaxy.yml
ansible_collections/ska_collections/gateway/: README.md  galaxy.yml
ansible_collections/ska_collections/gitlab_runner/: README.md  galaxy.yml
ansible_collections/ska_collections/idrac/: extra_vars.yml
ansible_collections/ska_collections/instance_common/: .release  README.md  galaxy.yml
ansible_collections/ska_collections/k8s/: README.md  galaxy.yml
ansible_collections/ska_collections/logging/: README.md  galaxy.yml
ansible_collections/ska_collections/metallb/: README.md  galaxy.yml
ansible_collections/ska_collections/minikube/: README.md  galaxy.yml
ansible_plugins/filter/: filters.py
collections/elastic/: galaxy.yml
collections/stack_cluster/: README.md  galaxy.yml
resources/jobs/: binderhub.mk  ceph.mk  clusterapi.mk  common.mk  dns.mk  elastic.mk  gateway.mk  gitlab-management.mk  gitlab-runner.mk  gitlab_runner.mk  k8s.mk  logging.mk  metallb.mk  monitoring.mk  nexus.mk  oci.mk  openvpn.mk  reverseproxy.mk
resources/scripts/: clean-namespaces.sh
tmp/cache/: obj
(+1020 files in other folders)
