[tool.poetry]
name = "ska-ser-ansible-collections"
version = "0.1.0"
description = ""
authors = ["Domingos Nunes <domingos.nunes@atlar.pt>"]

[tool.poetry.dependencies]
python = "^3.8"
mitogen = "^0.3.3"
ansible = "^6.5"
jmespath = "^1.0.1"
flake8 = "^5.0.4"

[tool.poetry.dev-dependencies]
ansible-lint = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
