[tool.poetry]
name = "ska-ser-ansible-collections"
version = "0.1.0"
description = ""
authors = ["Domingos Nunes <domingos.nunes@atlar.pt>"]

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^6.5"
jmespath = "^1.0.1"
flake8 = "^5.0.4"
lxml = "^4.9.1"
ansible-lint-junit = "^0.17.7"
kubernetes = "^26.1.0"

[tool.poetry.dev-dependencies]
ansible-lint = "^6.0"
pylint = "^2.17.4"
black = "^23.3.0"
isort = "^5.12.0"
pylint-junit = "^0.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
